-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0
-
None
-
-
da951c9dbf (qt/qtbase/dev) da951c9dbf (qt/tqtc-qtbase/dev) 599c87893b (qt/tqtc-qtbase/5.15) 081a6467ad (qt/tqtc-qtbase/6.2) f8fcc89ca7 (qt/qtbase/6.3) f8fcc89ca7 (qt/tqtc-qtbase/6.3) 398d5d6038 (qt/qtbase/6.4) 398d5d6038 (qt/tqtc-qtbase/6.4)
As soon as there are multiple URLs, one of them being invalid, it crashes on drag.
Here's an example that triggers it:
import QtQuick import QtQuick.Controls ApplicationWindow { id: window width: 600 height: 400 visible: true Item { anchors.fill: parent Rectangle { id: myItem width: 100 height: 60 color: "green" Drag.active: dragArea.drag.active Drag.dragType: Drag.Automatic Drag.mimeData: { "text/uri-list": "file:///some/valid/path\nsome_invalid_url" } MouseArea { id: dragArea anchors.fill: parent drag.target: parent } } } }
Stack trace is attached.
Environment:
OS: macOS 12.5
Arch: ARM 64
- is duplicated by
-
QTBUG-107265 Drag+drop from macOS finder to QTreeView crashes
-
- Closed
-
For Gerrit Dashboard: QTBUG-105711 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
427818,4 | QCocoaDrag: don't add pasteboard items with non-absolute URLs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
428445,2 | QCocoaDrag: don't add pasteboard items with non-absolute URLs | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
428446,2 | QCocoaDrag: don't add pasteboard items with non-absolute URLs | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
428447,2 | QCocoaDrag: don't add pasteboard items with non-absolute URLs | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
428448,2 | QCocoaDrag: don't add pasteboard items with non-absolute URLs | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |